@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-17T01:51:48Z",
-  "count_outdated" : 1412,
-  "uniques_outdated" : 932,
+  "timestamp" : "2025-03-18T01:49:26Z",
+  "count_outdated" : 1413,
+  "uniques_outdated" : 933,
   "count" : 1423,
   "uniques" : 943,
   "clones" : [
-    {
-      "timestamp": "2025-03-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-03-06T00:00:00Z",
       "count": 2,
