@@ -1,3 +1,12 @@
+2025-03-18T01:49:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13913626676 # 597
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-18
+* notice: last 14d: unq all: 3 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 932 1412 / 943 1423
+* notice: next accum: outdated-unq outdated-all / unq all: 933 1413 / 943 1423
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-03-04] / []
+
 2025-03-17T01:51:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13889866295 # 596
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-17
